--- a/index.html
+++ b/index.html
@@ -1,40 +1,127 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Pagina Pessoal Fernanda </title>
-  </head>
-  <body>
-    <header>
-      <h1> Fernanda Cividini </h1>
-      <nav>
-        <ul>
-          <li><a href="#sobre"> Sobre Mim</a></li>
-          <li><a href="#projetos"> Projetos</a></li>
-          <li><a href="#contato"> Contato</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <section id="sobre">
-      <h2> Sobre Mim </h2>
-      <p> Me chamo Fernanda Cividini, moro em Videira-sc, nasci no dia 05/12/2009, hoje em dia tenho 14 anos, tenho 1 irmã, 4 cachorros e 1 gato. </p>
-    </section>
 
-    <section id="projetos">
-      <h2> Projetos </h2>
+<head>
+  <title> Pagina Pessoal Fernanda </title>
+</head>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+
+  body {
+    fonf-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    padding: 20px;
+  }
+
+
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+  }
+
+
+  header h1 {
+    margin-botton: 10px;
+  }
+
+
+  nav ul {
+    list-style: none;
+  }
+
+
+  nav ul li {
+    display: inline;
+    margin: 0 10px;
+  }
+
+
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+
+  section {
+    margin: 20px 0;
+  }
+
+
+  section#sobre,
+  section#projetos,
+  section#contato {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba (0, 0, 0.1);
+  }
+
+
+  footer {
+    text-align: center;
+    margin-top: 20px;
+  }
+</style>
+
+
+<body>
+  <header>
+    <h1> Fernanda Cividini </h1>
+    <nav>
       <ul>
-        <li> Projeto 1: <a href="#"> Descrição do Projeto 1</a></li>
-        <li> Projeto 2: <a href="#"> Descrição do Projeto 2</a></li>
+        <li><a href="#sobre"> Sobre Mim</a></li>
+        <li><a href="#projetos"> Projetos</a></li>
+        <li><a href="#contato"> Contato</a></li>
       </ul>
-    </section>
+    </nav>
+  </header>
 
-    <section id="contato">
-      <h2> Contato </h2>
-      <p> Entre em contato comigo via <a href="mailto:fernanda_cividini@estudante.sesisenai.org.br">fernanda_cividini@estudante.sesisenai.org</a>.</p>
-    </section>
 
-    <footer>
-      <p>&copy; @2024 - Fernanda Cividini </p>
-    </footer>
-  </body>
+
+
+  <section id="sobre">
+    <h2> Sobre Mim </h2>
+    <p> Me chamo Fernanda Cividini, moro em Videira-sc, nasci no dia 05/12/2009, hoje em dia tenho 14 anos, tenho 1
+      irmã, 4 cachorros e 1 gato. </p>
+  </section>
+
+
+
+
+  <section id="projetos">
+    <h2> Projetos </h2>
+    <ul>
+      <li> Projeto 1: <a href="#"> Descrição do Projeto 1</a></li>
+      <li> Projeto 2: <a href="#"> Descrição do Projeto 2</a></li>
+    </ul>
+  </section>
+
+
+
+
+  <section id="contato">
+    <h2> Contato </h2>
+    <p> Entre em contato comigo via <a
+        href="mailto:fernanda_cividini@estudante.sesisenai.org.br">fernanda_cividini@estudante.sesisenai.org</a>.</p>
+  </section>
+
+
+
+
+  <footer>
+    <p>&copy; @2024 - Fernanda Cividini </p>
+  </footer>
+</body>
+
+
 </html>
