--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   section#sobre,
   section#projetos,
+  section#cadastro,
   section#contato {
     background-color: #fff;
     padding: 20px;
@@ -71,6 +72,44 @@
     text-align: center;
     margin-top: 20px;
   }
+    h3 {
+    text-align: center;
+  }
+
+
+  form {
+    max-width: 400px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 30px;
+  }
+  label,
+  input{
+    display:block;
+    margin-bottom: 10px;
+  }
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"]{
+    width: 95%;
+    padding: 10px;
+    border: 1px solid #ccc
+    border-radius: 5px;
+  }
+  input[type="submit"]{
+        width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color:#fff;
+    cursor:pointer;
+  }
+  input[type="sebmit"]:hover{
+    background-color: #0056b3;
+  }
+
 </style>
 
 
@@ -81,6 +120,7 @@
       <ul>
         <li><a href="#sobre"> Sobre Mim</a></li>
         <li><a href="#projetos"> Projetos</a></li>
+        <li><a href="#cadastro"> Cadastro</a></li>
         <li><a href="#contato"> Contato</a></li>
       </ul>
     </nav>
@@ -106,15 +146,30 @@
     </ul>
   </section>
 
+  <section id="cadastro">
+  <h3> Cadastro de Pessoas </h3>
+  <form>
+    <label> Nome </label>
+    <input type="text" id="nome" name="nome" required>
 
 
+    <label> Email </label>
+    <input type="email" id="email" name="email" required>
+
+
+    <label> Telefone </label>
+    <input type="tel" id="telefone" name="telefone" required>
+    <input type="submit" value= "Cadastrar">
+
+
+  </form>
+  </section>
 
   <section id="contato">
     <h2> Contato </h2>
     <p> Entre em contato comigo via <a
         href="mailto:fernanda_cividini@estudante.sesisenai.org.br">fernanda_cividini@estudante.sesisenai.org</a>.</p>
   </section>
-
 
 
 
